# code-counter

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  exclude.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  exclude.rs  languages.rs  lib.rs  main.rs  scanner.rs
src/components/: DirectoryPicker.tsx  ExcludeRules.tsx  FileTable.tsx  LanguageChart.tsx  LanguageTable.tsx  ScanOptions.tsx  ScanningAnimation.tsx  ScanningOverlay.tsx  SummaryCards.tsx
src/hooks/: useScanner.ts
