[package]
name = "code-counter"
version = "1.0.0"
description = "源码统计工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
walkdir = "2.5.0"
regex = "1.10.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
